# scl-kit

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .qmake.conf  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  correct_author.sh  mkdocs.yml  scl-kit.pro
.github/workflows/: build.yml  docs.yml  release.yml
doc/mkdocs/: index.md
doc/ru/: main.md
include/Event/: Any.h  Emitter.h  Floater.h  View.h
include/ScL/: Feature.h  Meta.h  Utility.h
include/ScL/Feature/: Access.h  Cast.h  Guard.h  MixIn.h  Reflection.h  Tool.h  Trait.h  Wrapper.h
include/ScL/Meta/: Counter.h  String.h  Trait.h  Type.h
include/ScL/Utility/: MemberSignature.h  Qualifier.h  SimilarMethod.h  SimilarRefer.h  SingleArgument.h  TypeOf.h  ValueOf.h
main/: 404.html  index.html
main/scl-feature/: index.html
main/scl-feature/annotated/: index.html
main/scl-feature/class_member_enums/: index.html
main/scl-feature/class_member_functions/: index.html
main/scl-feature/class_member_typedefs/: index.html
main/scl-feature/class_member_variables/: index.html
main/scl-feature/class_members/: index.html
main/scl-feature/classes/: index.html
main/scl-feature/classscl_1_1feature_1_1inplace_1_1plain/: index.html
main/scl-feature/classscl_1_1feature_1_1inplace_1_1uninitialized/: index.html
main/scl-feature/concepts_2wrapper_8h/: index.html
main/scl-feature/concepts_2wrapper_8h_source/: index.html
main/scl-feature/concepts_8h/: index.html
main/scl-feature/concepts_8h_source/: index.html
main/scl-feature/detail_2wrapper_8h/: index.html
main/scl-feature/detail_2wrapper_8h_source/: index.html
main/scl-feature/dir_0353163fedb9ed52d00571e05b9d7425/: index.html
main/scl-feature/dir_128cb90ac92ab15b1b3598556d036c00/: index.html
main/scl-feature/dir_3cb8c5947ec40e9fe62f293d8773d742/: index.html
main/scl-feature/dir_910e174fc0e8c8ed40843bba5172f2f4/: index.html
main/scl-feature/dir_a7b0466279106ea0b8f86f609f621680/: index.html
main/scl-feature/dir_a84fae2e5328daedf40681be880e8335/: index.html
main/scl-feature/dir_b3eb4ac5eceab19e0dcca8b4c96aaf20/: index.html
main/scl-feature/dir_f37dd920b215c7d361cd7dbe8578ca36/: index.html
main/scl-feature/dir_fa8d125dcaa64c120bbbc8d1167944b9/: index.html
main/scl-feature/feature_8h/: index.html
main/scl-feature/feature_8h_source/: index.html
main/scl-feature/files/: index.html
main/scl-feature/functions/: index.html
main/scl-feature/group__scl__feature__concepts/: index.html
main/scl-feature/group__scl__feature__type__traits/: index.html
main/scl-feature/group__scl__feature__wrapper/: index.html
main/scl-feature/hierarchy/: index.html
main/scl-feature/macros/: index.html
main/scl-feature/modules/: index.html
main/scl-feature/namespace_member_functions/: index.html
main/scl-feature/namespace_member_typedefs/: index.html
main/scl-feature/namespace_member_variables/: index.html
main/scl-feature/namespace_members/: index.html
main/scl-feature/namespaces/: index.html
main/scl-feature/namespacescl/: index.html
main/scl-feature/namespacescl_1_1feature/: index.html
main/scl-feature/namespacescl_1_1feature_1_1concepts/: index.html
main/scl-feature/namespacescl_1_1feature_1_1inplace/: index.html
main/scl-feature/namespacestd/: index.html
main/scl-feature/pages/: index.html
main/scl-feature/plain_8h/: index.html
main/scl-feature/plain_8h_source/: index.html
main/scl-feature/structscl_1_1feature_1_1is__wrapper/: index.html
main/scl-feature/type__traits_2wrapper_8h/: index.html
main/scl-feature/type__traits_2wrapper_8h_source/: index.html
main/scl-feature/type__traits_8h/: index.html
main/scl-feature/type__traits_8h_source/: index.html
main/scl-feature/uninitialized_8h/: index.html
main/scl-feature/uninitialized_8h_source/: index.html
main/scl-feature/variables/: index.html
main/scl-feature/wrapper_8h/: index.html
main/scl-feature/wrapper_8h_source/: index.html
main/scl-utility/: index.html
main/scl-utility/annotated/: index.html
main/scl-utility/class_member_functions/: index.html
main/scl-utility/class_member_typedefs/: index.html
main/scl-utility/class_member_variables/: index.html
main/scl-utility/class_members/: index.html
main/scl-utility/classes/: index.html
main/scl-utility/counter_8h/: index.html
main/scl-utility/counter_8h_source/: index.html
main/scl-utility/detection_8h/: index.html
main/scl-utility/detection_8h_source/: index.html
main/scl-utility/dir_76f6b7cf5a6cf438d50211f1abeeaae6/: index.html
main/scl-utility/dir_7ae4f81ae30c9db8975b98cdcb7060a6/: index.html
main/scl-utility/dir_85c7392cbdcb0ae852d6674ea46dde19/: index.html
main/scl-utility/dir_a3b1215870dd7b05435314af8f203f78/: index.html
main/scl-utility/dir_a7b0466279106ea0b8f86f609f621680/: index.html
main/scl-utility/dir_ab13fdfb8e4c1ff98b437eee9f69d35c/: index.html
main/scl-utility/dir_ca45970a26780365ec2accbdb8d8d4fe/: index.html
main/scl-utility/dir_cca185d4009e66bf68ef58b617abaf60/: index.html
main/scl-utility/dir_ee84acd7aed8e5e3b0eed877408f2d18/: index.html
main/scl-utility/enum_8h/: index.html
main/scl-utility/enum_8h_source/: index.html
main/scl-utility/files/: index.html
main/scl-utility/forward_8h/: index.html
main/scl-utility/forward_8h_source/: index.html
main/scl-utility/forward__like_8h/: index.html
main/scl-utility/forward__like_8h_source/: index.html
main/search/: search_index.json
project/cmake/: CMakeLists.txt  SCLConfig.cmake.in  SCLCross.cmake  SCLDependencies.cmake
project/cmake/example/: CMakeLists.txt
project/cmake/module/: CMakeLists.txt  SCLDependencies.cmake
project/cmake/test/: CMakeLists.txt
project/doxygen/: Doxyfile
project/qmake/: 3rdparty.pro  benchmark.pro  example.pro  examples.pro  module.pro  test.pro  tests.pro
project/sphinx/: conf.py  index.rst
project/toolchain/: clang-generic.cmake  gcc-generic,cmake
script/: format-all.sh  make-include.sh
script/ci/: mirror_github.sh  mirror_github_manual.sh  mirror_github_transform.sh  transform_gitmodules.py
script/claude/: build.bat  run_tests.bat
(+273 files in other folders)
